# rust-coreutils

src/uu/dd/: Cargo.toml
src/uu/dd/src/: dd.rs
src/uu/install/: Cargo.toml
src/uu/install/src/: install.rs
src/uu/mv/: Cargo.toml
src/uu/mv/src/: mv.rs
src/uucore/: Cargo.toml
src/uucore/src/lib/: features.rs  lib.rs
src/uucore/src/lib/features/: backup.rs
