[package]
name = "uu_dd"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "dd ~ (uutils) disk to disk copy"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/master/src/uu/dd"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/dd.rs"

[dependencies]
clap = "2.33"
uucore = { version=">=0.0.8", package="uucore", path="../../uucore" }
uucore_procs = { version=">=0.0.5", package="uucore_procs", path="../../uucore_procs" }

[[bin]]
name = "dd"
path = "src/main.rs"
